--- a/inc/customizer/custom-controls/assets/css/unminified/responsive-background.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/responsive-background.css
@@ -291,7 +291,7 @@
 .customize-control-ast-responsive-background .ast-responsive-btns {
   position: absolute;
   right: 42px;
-  top: 1.5px;
+  top: 5.7px;
 }
 .ast-field-settings-modal .customize-control-ast-responsive-background .ast-responsive-btns  {
   right: 8px;
