--- a/inc/customizer/custom-controls/assets/css/unminified/responsive-color.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/responsive-color.css
@@ -88,7 +88,7 @@
 .customize-control-ast-responsive-color .ast-responsive-btns {
   position: absolute;
   right: 42px;
-  top: 1.5px;
+  top: 5.7px;
 }
 .ast-field-settings-modal .customize-control-ast-responsive-color .ast-responsive-btns  {
   right: 8px;
